clusters/prod/external-servers/homebridge/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: homebridge-ingress
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`homebridge.home.jonahsserver.com`)
      kind: Rule
      services:
        - name: homebridge
          port: 8581
          scheme: http
  tls:
    secretName: homebridge-certificate-secret
